Fri Jun  8 15:26:41 2001  David Helder  <dhelder@umich.edu>

	* examples/echoserver.c (async_server_iofunc): Should be
	   accept_nonblcok in async_server_iofunc, not accept.
	
	* BUGS: Typo

Thu May 31 10:46:30 2001  David Helder  <dhelder@umich.edu>

	* Makefile.am (EXTRA_DIST): Add README.win32 GNET.DSP
	     config.h.win32 gnet.def
	* */Makefile.am: Add makefile.mingw
	
	* configure.in: Version is now 1.1.1 [unreleased]
	
	* configure.in: Remove poll check
	* src/udp.c (gnet_udp_socket_has_packet): Use select,
	   not poll.
	* src/gnet-private.h: Remove poll
	* README.macosx: Added
	* Makefile.am: Added README.macosx to 
	   EXTRA_DIST
	* AUTHORS: Added Eric Cronin for above

	* src/sha.c (gnet_sha_clone): Added.
	* src/md5.c (gnet_md5_clone): Added.

	* debian/control.in: Sync with README

Thu May 24 21:20:09 2001  David Helder  <dhelder@umich.edu>

	* gnet.spec.in: Change name back to 'gnet'.  I don't
	    know how to fix this...

	* *: Get ready for release...
	
Thu May 24 12:12:04 2001  Andrew Lanoix <alanoix@umich.edu>

	* NEWS updated to say full windows port

Thu May 24 10:14:02 2001  David Helder  <dhelder@umich.edu>

	* examples/echoserver.c (object_echoserver): Fixed
	    call to gnet_server_new.

	* examples/Makefile.am: Make examples noinst, not extra.

Wed May 23  9:33:45 2001  Andrew Lanoix <alanoix@umich.edu>

	* Add makefiles for mingw (gcc for windows) 

	* examples/echoserver.c: In object_echoserver(),
	  too may args to gnet_server_new()

	* update Gnet.dsp
	* update gnet.def
	* update gnetconfig.h.win32 Version to 1.1.0

Wed May 23 10:08:09 2001  David Helder  <dhelder@umich.edu>

	* src/gnet.h: Include all files on Win32

Tue May 22 23:25:59 2001  David Helder  <dhelder@umich.edu>

	* src/pack.c (strlenn): Fixed sign issue

Tue May 22 16:45:01 2001  David Helder  <dhelder@umich.edu>

	* gnet.m4: Fix URL
	* README (Features): Fix URL
	* debian/control.in: Add URL

Tue May 22 22:21:31 2001  Andrw Lanoix  <alanoix@umich.edu>
