@@ -1,3 +1,7 @@
+Fri Jun  8 16:49:16 2001  David Helder  <dhelder@umich.edu>
+
+	* tests/hash.c: Don't use mmap.  Don't make main loop.
+
 Fri Jun  8 15:26:41 2001  David Helder  <dhelder@umich.edu>
 
 	* examples/echoserver.c (async_server_iofunc): Should be
